--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat IA</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="container">
+        <h1>Chat con IA</h1>
+
+        <div id="chat-box"></div>
+
+        <div class="input-area">
+            <input type="text" id="user-input" placeholder="Scrivi un messaggio..." />
+            <button onclick="sendMessage()">Invia</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
